added some styles, got the logo built, and the initla hero page done

--- a/Mixpanel/CE Style Guide/assets/css/global.less
+++ b/Mixpanel/CE Style Guide/assets/css/global.less
@@ -1,14 +1,12 @@
+html {
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  margin: 0;
+}
+
 @import 'fonts';
 @import 'variables';
 @import 'mixins';
-
-
-/************* TYPOGRAPHY ************/
-
-body {
-  background: @text-grey1;
-}
-
-p {
-  .paragraph;
-}
+@import 'ce-styleguide';
