--- a/Mixpanel/CE Style Guide/assets/css/mixins.less
+++ b/Mixpanel/CE Style Guide/assets/css/mixins.less
@@ -1,49 +1,42 @@
 
-/************* TYPOGRAPHY ************/
+/*START
+************ NEW TYPOGRAPHY ************/
 
-// .paragraph-mpfont {
-// 	font-family: @mpfont;
-// 	font-size: 14px;
-// 	line-height: @baseunit*3;
-// 	color: @text-grey3;
-// }
-
-// .paragraph-prox {
-// 	font-family: @prox;
-// 	font-size: 14px;
-// 	line-height: @baseunit*3;
-// 	color: @text-grey3;
-// }
-
-.paragraph {
-	font-family: "Helvetica", "Arial", sans-serif;
+.paragraph-mpfont {
+	font-family: @mpfont;
 	font-size: 14px;
 	line-height: @baseunit*3;
-	color: @text-grey3;
-	font-weight: normal;
 }
 
-// .headline-mpfont {
-// 	font-family: @mpfont;
-// 	font-size: 18px;
-// 	line-height: @baseunit*3;
-// 	color: @text-grey4;
-// }
-
-.headline-prox {
-	font-family: @prox;
+.headline-mpfont {
+	font-family: @mpfont;
 	font-size: 18px;
 	line-height: @baseunit*3;
-	color: @text-grey4;
-	font-weight: 900;
 }
 
-// .headline-helv {
-// 	font-family: "Helvetica", "Arial", sans-serif;
-// 	font-size: 18px;
-// 	line-height: @baseunit*3;
-// 	color: @text-grey4;
-// }
+.h1 {
+	font-family: @mpfont;
+	font-size: 81px;
+	line-height: @baseunit*7;
+	font-weight: 100;
+	letter-spacing: -1px;
+	margin-bottom: @baseunit*6;
+}
+
+.h3 {
+	font-family: @mpfont;
+	font-size: 36px;
+	line-height: @baseunit*6;
+	font-weight: 100;
+	letter-spacing: -1px;
+	margin-bottom: @baseunit*6;
+}
+
+/*END
+************* NEW TYPOGRAPHY ************/
+
+/*START
+************ WEIGHTS ************/
 
 .light { font-weight: 100; }
 .book { font-weight: 300; }
@@ -51,3 +44,39 @@
 .medium { font-weight: 500; }
 .semibold { font-weight: 700; }
 .bold { font-weight: 900; }
+
+/*END
+************* WEIGHTS ************/
+
+/*START
+************* Old Product ************/
+
+.paragraph {
+	font-family: "Helvetica", "Arial", sans-serif;
+	font-size: 14px;
+	line-height: @baseunit*3;
+	color: @grey3;
+	font-weight: normal;
+}
+
+.headline {
+	font-family: @prox;
+	font-size: 18px;
+	line-height: @baseunit*3;
+	color: @grey4;
+	font-weight: 900;
+}
+
+/*END
+************* Old Product ************/
+
+/*START
+************* LAYOUT ************/
+
+.vertical-center {
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+/*END
+************* LAYOUT ************/
