--- a/Mixpanel/CE Style Guide/assets/css/variables.less
+++ b/Mixpanel/CE Style Guide/assets/css/variables.less
@@ -1,13 +1,10 @@
 /************* COLOR ************/
 
 @primary-blue: RGB(80, 170, 255);
-
-/************* TEXT COLOR ************/
-
-@text-grey1: RGB(193, 204, 214);
-@text-grey2: RGB(156, 172, 187);
-@text-grey3: RGB(110, 133, 157);
-@text-grey4: RGB(76, 96, 114);
+@grey1: RGB(193, 204, 214);
+@grey2: RGB(156, 172, 187);
+@grey3: RGB(110, 133, 157);
+@grey4: RGB(76, 96, 114);
 
 /************* GRIDS & UNITS ************/
 
