--- a/Mixpanel/CE Style Guide/assets/css/mixins.less
+++ b/Mixpanel/CE Style Guide/assets/css/mixins.less
@@ -2,33 +2,54 @@
 /*START
 ************ NEW TYPOGRAPHY ************/
 
-.paragraph-mpfont {
+.fontSize-ExtraExtraLarge {
 	font-family: @mpfont;
-	font-size: 14px;
-	line-height: @baseunit*3;
-}
-
-.headline-mpfont {
-	font-family: @mpfont;
-	font-size: 18px;
-	line-height: @baseunit*3;
-}
-
-.h1 {
-	font-family: @mpfont;
-	font-size: 81px;
+	font-size: 42px;
 	line-height: @baseunit*7;
 	font-weight: 100;
 	letter-spacing: -1px;
 	margin-bottom: @baseunit*6;
 }
 
-.h3 {
+.fontSize-ExtraLarge {
 	font-family: @mpfont;
-	font-size: 36px;
-	line-height: @baseunit*6;
+	font-size: 34px;
+	line-height: @baseunit*7;
 	font-weight: 100;
 	letter-spacing: -1px;
+	margin-bottom: @baseunit*6;
+}
+
+.fontSize-Large {
+	font-family: @mpfont;
+	font-size: 26px;
+	line-height: @baseunit*5;
+	font-weight: 300;
+	letter-spacing: -1px;
+	margin-bottom: @baseunit*6;
+}
+
+.fontSize-Medium {
+	font-family: @mpfont;
+	font-size: 16px;
+	line-height: @baseunit*4;
+	font-weight: normal;
+	margin-bottom: @baseunit*6;
+}
+
+.fontSize-Small {
+	font-family: @mpfont;
+	font-size: 14px;
+	line-height: @baseunit*3;
+	font-weight: normal;
+	margin-bottom: @baseunit*6;
+}
+
+.fontSize-Micro {
+	font-family: @mpfont;
+	font-size: 11px;
+	line-height: @baseunit*2;
+	font-weight: normal;
 	margin-bottom: @baseunit*6;
 }
 
@@ -40,7 +61,7 @@
 
 .light { font-weight: 100; }
 .book { font-weight: 300; }
-.reg { font-weight: normal; }
+.basic { font-weight: normal; }
 .medium { font-weight: 500; }
 .semibold { font-weight: 700; }
 .bold { font-weight: 900; }
