--- a/Mixpanel/CE Style Guide/assets/css/global.less
+++ b/Mixpanel/CE Style Guide/assets/css/global.less
@@ -1,9 +1,20 @@
 html {
   -webkit-font-smoothing: antialiased;
+   box-sizing: border-box;
 }
 
 * {
   margin: 0;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.cf:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 @import 'fonts';
