--- a/Mixpanel/CE Style Guide/assets/css/global.less
+++ b/Mixpanel/CE Style Guide/assets/css/global.less
@@ -21,3 +21,120 @@ html {
 @import 'variables';
 @import 'mixins';
 @import 'ce-styleguide';
+@import 'hljs';
+
+/************* GLOBAL ************/
+
+body {
+  background: #fff;
+}
+
+::-moz-selection {
+    color: #FFF;
+    background: @primary-blue;
+    text-shadow: none;
+}
+
+::selection {
+    color: #FFF;
+    background: @primary-blue;
+    text-shadow: none;
+}
+
+header {
+	height: 70px;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	background: #fff;
+	transition: all 200ms;
+	&.scrolled {
+		height: 56px;
+		box-shadow: 0 1px 3px rgba(0,0,0,.08);
+		transition: all 200ms;
+	}
+}
+
+.logo {
+	background: @primary-blue;
+	width: 22px;
+	height: 22px;
+	border-radius: 50em;
+	border: transparent;
+	position: relative;
+	margin: 24px;
+	transition: all 200ms;
+	&::before, &::after {
+		background: @primary-blue;
+		border-radius: 50em;
+		border: transparent;
+		display: inline-block;
+		position: absolute;
+		content: "";
+	}
+	&::before {
+		width: 16px;
+		height: 16px;
+		left: 40px;
+		top: 3px;
+	}
+	&::after {
+		width: 6px;
+		height: 6px;
+		left: 74px;
+		top: 8px;
+	}
+}
+
+header.scrolled .logo {
+	transform: scale(0.7);
+	margin: 17px;
+	transition: all 200ms;
+}
+
+nav ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-align: right;
+	margin-right: 24px;
+	font-family: @mpfont;
+	height: 0;
+	transition: all 200ms;
+}
+
+nav ul li {
+	display: inline-block;
+	margin-left: 20px;
+	&.active a {
+		border-bottom: 2px solid @primary-blue;
+	}
+}
+
+nav ul li a {
+	text-decoration: none;
+	.basic;
+	display: block;
+	padding: 26px 0;
+	transition: all 200ms;
+	border-bottom: 2px solid transparent;
+	transition: all 200ms;
+	&:hover {
+		color: @grey4;
+		transition: all 200ms;
+	}
+	&.fontSize-s {
+		margin-bottom: 0;
+		color: @grey4;
+	}
+}
+
+header.scrolled nav ul {
+	margin-right: 20px;
+	transition: all 200ms;
+}
+
+header.scrolled nav ul li a {
+	padding: 18px 0 18px 0;
+	transition: all 200ms;
+}
