--- a/Mixpanel/CE Style Guide/assets/css/global.less
+++ b/Mixpanel/CE Style Guide/assets/css/global.less
@@ -125,7 +125,12 @@ nav ul li a {
 	}
 	&.fontSize-s {
 		margin-bottom: 0;
-		color: @grey4;
+		color: @grey2;
+		transition: all 200ms;
+		&:hover {
+			color: @grey4;
+			transition: all 200ms;
+		}
 	}
 }
 
