--- a/Mixpanel/CE Style Guide/assets/css/variables.less
+++ b/Mixpanel/CE Style Guide/assets/css/variables.less
@@ -1,10 +1,12 @@
 /************* COLOR ************/
 
-@primary-blue: RGB(80, 170, 255);
-@grey1: RGB(193, 204, 214);
-@grey2: RGB(156, 172, 187);
-@grey3: RGB(110, 133, 157);
-@grey4: RGB(76, 96, 114);
+@primary-blue: #3DBAFD;
+@primary-green: #9FC73A;
+@primary-yellow: #F8CA42;
+@grey1: #B6BBC8;
+@grey2: #838DA3;
+@grey3: #444F5A;
+@grey4: #192232;
 
 /************* GRIDS & UNITS ************/
 
