--- a/Personal/Colors/style.css
+++ b/Personal/Colors/style.css
@@ -27,3 +27,32 @@ textarea {
 	width: 300px;
 	height: 100px;
 }
+
+#Sorted{
+  position: relative;
+  top: 50px;
+}
+#Pusher{
+  position: relative;
+  top: 100px;
+}
+#hueSort{
+  position: relative;
+	top: 150px;
+}
+
+.col-4 {
+	width: 20%;
+	margin: 0 0 15px -4px;
+	display: inline-block;
+	padding: 0;
+}
+
+.mb-1 {
+	width: 50px;
+	height: 50px;
+}
+
+#original {
+	display: none !important;
+}
