--- a/Personal/Colors/style.css
+++ b/Personal/Colors/style.css
@@ -3,56 +3,41 @@
 
 body {
 	background: #fff;
-	padding: 100px;
-}
-
-.output {
-	width: 100px;
-	height: 100px;
-	margin-top: 50px;
-}
-
-.color {
-	width: 80px;
-	height: 80px;
+	padding: 50px 50px 0 50px;
 }
 
 h3 {
-	color: #000;
-	margin-top: 10px;
-	font: 12px Helvetica;
+	color: rgba(255,255,255,.60	);
+	position: absolute;
+	bottom: 15px;
+	left: 15px;
+	font: 14px Lato, Avenir, Helvetica, sans-serif;
+	text-transform: uppercase;
+	transition: color 200ms;
 }
 
-textarea {
-	width: 300px;
-	height: 100px;
+#Sorted,
+#Original {
+	display: block;
+	margin: 0 auto 50px;
 }
 
-#Sorted{
-  position: relative;
-  top: 50px;
-}
-#Pusher{
-  position: relative;
-  top: 100px;
-}
-#hueSort{
-  position: relative;
-	top: 150px;
-}
-
-.col-4 {
-	width: 20%;
-	margin: 0 0 15px -4px;
+#Sorted div,
+#Original div {
+	width: 10%;
 	display: inline-block;
-	padding: 0;
+	margin: 0 0 -3px 0;
 }
 
-.mb-1 {
-	width: 50px;
-	height: 50px;
+#Sorted div:before,
+#Original div:before {
+	content: "";
+	display: block;
+	padding-top: 100%;
 }
 
-#original {
-	display: none !important;
+#Sorted div:hover h3,
+#Original div:hover h3 {
+	color: rgba(255,255,255,1);
+	transition: color 200ms;
 }
