--- a/Mixpanel/CE Style Guide/assets/css/variables.less
+++ b/Mixpanel/CE Style Guide/assets/css/variables.less
@@ -15,5 +15,5 @@
 
 /************* TYPOGRAPHY **************/
 
-@mpfont: "mixpanel";
+@mpfont: "Helvetica Neue", "HelveticaNeue", Helvetica Neue, HelveticaNeue, Helvetica, sans-serif;
 @prox: "proxima";
